[package]
name = "barter"
version = "0.8.13"
authors = ["Just A Stream <93921983+just-a-stream@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/barter/"
repository = "https://github.com/barter-rs/barter-rs"
readme = "README.md"
description = "Framework for building event-driven live-trading & backtesting engines"
keywords = ["trading", "backtesting", "crypto", "stocks", "investment"]
categories = ["accessibility", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Barter Ecosystem
barter-data = "0.7.0"
barter-integration = "0.5.3"

# Logging
tracing = "0.1.36"

# Async
tokio = { version = "1.32.0", features = ["sync", "fs", "io-util"] }
tokio-stream = { version = "0.1.14", features = ["sync", "io-util"] }
futures = "0.3.28"
async-stream = "0.3.5"
futures-core = "0.3.28"
futures-util = "0.3.28"

# Error
thiserror = "1.0.32"

# SerDe
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"

# Persistence
redis = "0.22.2"

# Strategy
ta = "0.5.0"

# Misc
uuid = { version = "1.2.2", features = ["v4", "serde"] }
chrono = { version = "0.4.28", features = ["serde"] }
prettytable-rs = "0.10.0"
parking_lot = "0.12.1"
csv-line = "0.2.0"
regex = "1.9.5"
